--- a/css/main.css
+++ b/css/main.css
@@ -26,12 +26,11 @@
   min-height: 70vh;
   background-image: url("../img/pencil.jpg");
   background-size: cover;
-  background-position: center;
+  background-position: left -120px;
 }
 
 h1 {
   font-size: 2rem;
-  margin: .5rem 0 0 0;
 }
 
 h2 {
@@ -40,15 +39,14 @@ h2 {
 
 h3 {
   font-size: 5rem;
-  margin: 0;
 }
 
 h4 {
-
+  font-size: 4rem;
 }
 
 h5 {
-
+  font-size: 1.5rem;
 }
 
 h6 {
@@ -90,4 +88,22 @@ h6 {
 .padding-left-right {
   padding-left: 5%;
   padding-right: 5%;
+}
+
+.margin-left-right-none {
+  margin-left: 0;
+  margin-right: 0;
+}
+
+.margin-top-bottom-none {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.margin-top-none {
+  margin-top: 0;
+}
+
+.margin-bottom-none {
+  margin-bottom: 0;
 }
